# drift

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DRIFT_V4_INTEGRATION_PLAN.md  LICENSE.md  README.md  mcp_server.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py
deploy/: Dockerfile  docker-compose.yml
deploy/systemd/: drift-api.service
docs/: API.md  ARCHITECTURE.md  CLA.md  GITHUB_SETUP.md  GOOGLE_DRIVE_GUIDE.md  INCORPORATION.md  LICENSE.md  LINKEDIN_CONTENT.md  OUTREACH_EMAILS.md  PITCH.md  PLATFORM_GUIDE.md  README.md
drift/: __init__.py
drift/api/: __init__.py  agent_context.py  models.py  server.py
drift/core/: __init__.py  being.py  being_snapshot.py  brain.py  cognition.py  cognitive_architecture.py  cognitive_factory.py  cognitive_orchestrator.py  commands.py  config.py  dmu.py  embeddings.py  embodiment.py  emotional_field.py  global_workspace.py  guardrails.py  history.py  homeostasis.py  iit_consciousness.py  intuition.py  local_llm.py  memory.py  metacognition.py  prompt_budget.py  prompt_builder.py  psc_scaled.py  resilience.py  security_tools.py  seed_cognition.py  self_modify.py  tools.py
drift/demos/: __init__.py  crewai_integration.py
drift/sdk/: __init__.py  client.py
scripts/: extract_core.py  fix_imports.py
tests/: test_aspirations.py  test_growth_trajectory.py  test_metacognition.py  test_predictor.py  test_self_modify.py  test_temporal.py
tests/core/: test_being.py  test_bot.py  test_cognitive_architecture.py  test_cognitive_factory.py  test_cognitive_orchestrator.py  test_computer_use.py  test_creativity.py  test_dreamer.py  test_embeddings.py  test_embodiment.py  test_emotional_field.py  test_explorer.py  test_global_workspace.py  test_homeostasis.py  test_humanity.py  test_iit_consciousness.py  test_inner_voice.py  test_intuition.py  test_local_llm.py  test_mcp_autonomy.py  test_mcp_http.py  test_persona.py  test_physics.py  test_preferences.py  test_prompt_budget.py  test_relationship.py  test_resilience.py  test_scheduler.py  test_security_tools.py  test_self_eval.py  test_stress.py  (+3 more)
(+31 files in other folders)
